Installed ionic cordova and added builds for android and ios - they don't completely work yet

--- a/clinicAssist/ionic.config.json
+++ b/clinicAssist/ionic.config.json
@@ -1,8 +1,8 @@
 {
   "name": "clinicAssist",
-  "app_id": "817928c6",
-  "type": "ionic-angular",
   "integrations": {
     "cordova": {}
-  }
+  },
+  "type": "ionic-angular",
+  "pro_id": "817928c6"
 }
