--- a/clinicAssist/package.json
+++ b/clinicAssist/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "5.2.11",
     "@ionic-native/core": "~4.10.0",
     "@ionic-native/splash-screen": "~4.10.0",
+    "@ionic-native/sqlite": "^4.14.0",
     "@ionic-native/status-bar": "~4.10.0",
     "@ionic/pro": "2.0.2",
     "@ionic/storage": "2.1.3",
@@ -32,6 +33,7 @@
     "cordova-plugin-ionic-webview": "^2.0.2",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-sqlite-storage": "^2.4.0",
     "ionic-angular": "3.9.2",
     "ionic2-auto-complete": "^1.6.2-alpha",
     "ionicons": "3.0.0",
@@ -50,7 +52,8 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-sqlite-storage": {}
     },
     "platforms": [
       "android",
