--- a/clinicAssist/package.json
+++ b/clinicAssist/package.json
@@ -29,6 +29,7 @@
     "cordova-android": "7.1.1",
     "cordova-ios": "4.5.5",
     "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-ionic": "^5.2.5",
     "cordova-plugin-ionic-keyboard": "^2.1.2",
     "cordova-plugin-ionic-webview": "^2.0.2",
     "cordova-plugin-splashscreen": "^5.0.2",
