--- a/clinicAssist/package.json
+++ b/clinicAssist/package.json
@@ -34,7 +34,7 @@
     "cordova-plugin-ionic-webview": "^2.0.2",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-whitelist": "^1.3.3",
-    "cordova-sqlite-storage": "^2.4.0",
+    "cordova-sqlite-storage": "2.6.0",
     "ionic-angular": "3.9.2",
     "ionic2-auto-complete": "^1.6.2-alpha",
     "ionicons": "3.0.0",
@@ -43,7 +43,7 @@
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "^3.2.1",
+    "@ionic/app-scripts": "^3.2.3",
     "typescript": "~2.6.2"
   },
   "description": "An Ionic project",
