--- a/clinicAssist/package.json
+++ b/clinicAssist/package.json
@@ -14,7 +14,7 @@
     "@angular/animations": "5.2.11",
     "@angular/common": "5.2.11",
     "@angular/compiler": "5.2.11",
-    "@angular/compiler-cli": "5.2.11",
+    "@angular/compiler-cli": "^7.2.13",
     "@angular/core": "5.2.11",
     "@angular/forms": "5.2.11",
     "@angular/http": "5.2.11",
@@ -26,6 +26,7 @@
     "@ionic-native/status-bar": "~4.10.0",
     "@ionic/pro": "2.0.2",
     "@ionic/storage": "2.1.3",
+    "angularfire2": "^5.1.2",
     "cordova-android": "7.1.1",
     "cordova-ios": "^4.5.5",
     "cordova-plugin-device": "^2.0.2",
@@ -35,6 +36,8 @@
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-sqlite-storage": "2.6.0",
+    "firebase": "^5.9.4",
+    "firebase-admin": "^7.3.0",
     "ionic-angular": "3.9.2",
     "ionic2-auto-complete": "^1.6.2-alpha",
     "ionicons": "3.0.0",
