Removed Firebase credentials.ts from source control and added it to .gitignore file

--- a/clinicAssist/.gitignore
+++ b/clinicAssist/.gitignore
@@ -34,4 +34,7 @@ $RECYCLE.BIN/
 Thumbs.db
 UserInterfaceState.xcuserstate
 
-config.xml
+config.xmli
+
+# We do not want to upload our Firebase credentials to GitHub
+src/app/credentials.ts
